--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^7.0.0",
+    "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "uuid": "^9.0.0"
   },
